force-app/main/default/objects/User/fields/Entities__c.field-meta.xml
<CustomField>
    <fullName>Entities__c</fullName>
    <label>Entities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>