force-app/main/default/objects/User/fields/inspire1__Auto_Create_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Auto_Create_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Timesheet</label>
    <type>Checkbox</type>
</CustomField>