force-app/main/default/objects/User/fields/inspire1__Current_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Current_Task_Id__c</fullName>
    <label>Current Task Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>