force-app/main/default/objects/User/fields/inspire1__Default_Portfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Default_Portfolio_ID__c</fullName>
    <label>Default Portfolio ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>