force-app/main/default/objects/User/fields/inspire1__Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Hourly_Rate__c</fullName>
    <description>Hourly cost of resource.  Used for project calculations.</description>
    <inlineHelpText>Hourly cost of resource.  Used for project calculations.</inlineHelpText>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>