force-app/main/default/objects/User/fields/inspire1__Inspire_Planner_User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Inspire_Planner_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that user has been assigned an Inspire Planner license.</description>
    <label>Inspire Planner User</label>
    <type>Checkbox</type>
</CustomField>