force-app/main/default/objects/User/fields/inspire1__Timer_Initial_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Timer_Initial_Date__c</fullName>
    <label>Timer Initial Date</label>
    <type>Date</type>
</CustomField>