force-app/main/default/objects/User/fields/inspire1__Timer_Initial_Time__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Timer_Initial_Time__c</fullName>
    <label>Timer Initial Time</label>
    <type>Time</type>
</CustomField>