force-app/main/default/objects/User/fields/inspire1__Timer_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Timer_Start_Time__c</fullName>
    <label>Timer Start Time</label>
    <type>DateTime</type>
</CustomField>