force-app/main/default/objects/User/fields/inspire1__Timer_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Timer_Time_Spent__c</fullName>
    <label>Timer Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>