force-app/main/default/objects/User/fields/inspire1__Working_Hours_per_Day__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Working_Hours_per_Day__c</fullName>
    <label>Working Hours per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>