force-app/main/default/objects/User/fields/sFiles_Authenticated__c.field-meta.xml
<CustomField>
    <fullName>sFiles_Authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sFiles Authenticated</label>
    <type>Checkbox</type>
</CustomField>